fix: Fix List Entries being too close together

--- a/assets/styles/changelog.css
+++ b/assets/styles/changelog.css
@@ -77,6 +77,9 @@ body {
 .bodies h1, h2, h3, h4, h5, h6{
     align-self: center;
 }
+li {
+    margin-bottom: 1%;
+}
 
 .bodies p {
     align-self: center;
