--- a/assets/styles/cotton-candy.css
+++ b/assets/styles/cotton-candy.css
@@ -107,6 +107,9 @@ body {
 .bodies h1, h2, h3, h4, h5, h6{
   align-self: center;
 }
+li {
+    margin-bottom: 1%;
+}
 
 .bodies p {
   align-self: center;
