--- a/assets/styles/dreamy.css
+++ b/assets/styles/dreamy.css
@@ -9,7 +9,9 @@ ol {
     list-style: decimal-leading-zero;
     font-size: 125%;
 }
-
+li {
+    margin-bottom: 1%;
+}
 .bodies ol {
     align-self: center;
 }
